adicionando funcionalidade para alterar funcionario

--- a/Aulas/Criando projeto do curso/locadora-veiculo-web/src/main/webapp/fabricante/PesquisaFabricantes.xhtml
+++ b/Aulas/Criando projeto do curso/locadora-veiculo-web/src/main/webapp/fabricante/PesquisaFabricantes.xhtml
@@ -16,7 +16,7 @@
 			<p:toolbar style="margin-top: 20px">
 				<p:toolbarGroup>
 					<p:commandButton value="Novo" id="botaoNovo"
-						action="/fabricante/CadastroFabricante" />
+						action="/fabricante/CadastroFabricante?faces-redirect=true" />
 				</p:toolbarGroup>
 			</p:toolbar>
 
@@ -34,7 +34,7 @@
 					<h:outputText value="#{fabricante.nome}" />
 				</p:column>
 				<p:column style="width: 100px; text-align: center">
-					<p:button outcome="CadastroFabricante" icon="ui-icon-pencil"
+					<p:button outcome="CadastroFabricante?faces-redirect=true" icon="ui-icon-pencil"
 						title="Editar">
 						<f:param name="fabricante" value="#{fabricante.codigo}" />
 					</p:button>
