--- a/Aulas/Criando projeto do curso/locadora-veiculo-web/src/main/webapp/fabricante/CadastroFabricante.xhtml
+++ b/Aulas/Criando projeto do curso/locadora-veiculo-web/src/main/webapp/fabricante/CadastroFabricante.xhtml
@@ -16,7 +16,8 @@
 		<h1>Novo fabricante</h1>
 
 		<h:form id="frmCadastro">
-			<p:messages id="messages" autoUpdate="true" closable="true" />
+			<p:growl autoUpdate="true" life="10000" sticky="false" severity="error, warn"/>
+			<p:messages autoUpdate="true" closable="true" severity="info"/>
 
 			<p:toolbar style="margin-top: 20px">
 				<p:toolbarGroup>
