--- a/Aulas/Importando um projeto do GitHub/primeiro-projeto-jsf/src/main/webapp/OlaJSF.xhtml
+++ b/Aulas/Importando um projeto do GitHub/primeiro-projeto-jsf/src/main/webapp/OlaJSF.xhtml
@@ -8,14 +8,26 @@
 
 	<h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <h:outputStylesheet name="style.css" library="css" />
         <title><ui:insert name="titulo">Primeiro projeto JSF</ui:insert></title>
 	</h:head>
 	
 	<h:body>
 		<h:form id="formulario">
-			<p:outputLabel value="Digite seu nome"/>
-			<p:inputText value="#{meuBean.nome}"/>
-			<p:commandButton value="Enviar" action="#{meuBean.transformar}" update="formulario"/>
+			<p:panelGrid columns="2" styleClass="panelGrid">
+				<p:outputLabel value="Digite seu nome"/>
+				<p:inputText value="#{meuBean.nome}"/>
+	
+				<p:outputLabel value="Nome alterado: " />
+				<p:inputText value="#{meuBean.nomeAlterado}" disabled="true" />
+
+				<h:outputLabel />
+				
+				<h:panelGroup style="text-align: right">
+					<p:commandButton value="Enviar" action="#{meuBean.transformar}" update="formulario"/>
+					<p:commandButton value="Limpar" action="#{meuBean.limpar}" update="formulario"/>
+				</h:panelGroup>
+			</p:panelGrid>
 		</h:form>
 	</h:body>
 
